--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="hero-visual">
                     <div class="hero-card">
                         <div class="profile-image">
-                            <img src="images/formal_dp_blazer.jpg" alt="Akshay Sayar" class="profile-photo">
+                            <img src="images/balcknwhite.jpg" alt="Akshay Sayar" class="profile-photo">
                         </div>
                     </div>
                 </div>
