Enhance chatbot responses with error handling and additional information about Akshay's experience and skills

--- a/index.html
+++ b/index.html
@@ -633,7 +633,9 @@
             
             <div class="chatbot-messages" id="chatbotMessages">
                 <div class="chatbot-message bot">
-                    👋 Hi! I'm Akshay's AI assistant. I can help you learn more about his experience, skills, and projects. What would you like to know?
+                    👋 Hi! I'm Akshay's AI assistant. I can help you learn more about his experience, skills, and projects. 
+                    <br><br>
+                    <small style="opacity: 0.8;">💡 First response might take 30-60 seconds as the backend wakes up. Subsequent responses will be faster!</small>
                 </div>
             </div>
             
